ResetMulticastSetup added to external service, node version upgrade 12->14.
